Try to fix contrast

--- a/sass/_header.scss
+++ b/sass/_header.scss
@@ -12,6 +12,7 @@
       list-style-type: none;
 
       a {
+        font-weight: bold;
         color: var(--color-accent);
         font-size: 1em;
         padding: 0 1em;
