--- a/sass/style.scss
+++ b/sass/style.scss
@@ -10,8 +10,8 @@
 @media (prefers-color-scheme: dark) {
   :root {
     --color-primary: #06d6a0;
-    --color-accent: #118ab2;
-    --color-light: gray;
+    --color-accent: #6acff1;
+    --color-light: #d2d5da;
   }
 }
 
